# ibos

./: .gitignore  README.md
demo/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  demo.py  demo2.py  main.c  main.elf  test.py
demo/.cmake/api/v1/reply/: codemodel-v2-d749a3c6bad1d74ddebe.json
demo/demo/include/: fast.h  receive.h  slow.h  transmit.h
demo/demo/src/: fast.c  main.c  receive.c  slow.c  transmit.c  uart.c
ibos/: Makefile
ibos/bench/: bench_memory.c
ibos/bench/src/: bench_memory.c
ibos/include/: assert.h  event_queue.h  global_event_queue.h  int.h  interrupt.h  memory.h  port.h  priority.h  ptr.h  task.h
ibos/mock/src/: memory.c
ibos/port/include/: port.h
ibos/port/mock/include/: interrupt.h
ibos/port/mock/src/: interrupt.c
ibos/port/src/mock/: interrupt.c
ibos/port/src/stm32l476rg/: interrupt.c
ibos/port/stm32l476rg/include/: interrupt.h
ibos/port/stm32l476rg/src/: interrupt.c
ibos/src/: event_queue.c  main.c  memory.c  ptr.c  slab_memory.c  task.c  test.c
ibos/test/: test_event_queue.c  test_memory.c  test_ptr.c
ibos/test/helper/include/: test.h
ibos/test/mock/include/: mock_memory.h
ibos/test/mock/src/: mock_memory.c
ibos/test/src/: test_event_queue.c  test_memory.c  test_ptr.c  test_task.c
test/: CMakeLists.txt  linker.ld  test.py
test/.cmake/api/v1/reply/: cache-v2-7a12dbe1a1f0eadfb635.json  cmakeFiles-v1-f188ff761fd10f1d34c6.json  (+2 more)
test/cmake/: toolchain-arm-gcc.cmake
test/demo/include/: config.h  uart.h
test/demo/src/: main.c  startup.S  uart.c
(+1 files in other folders)
